# bread

./: .coveralls.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  README.org  TODO.org  bread-core.cabal  bread.cabal  bread.go  cabal.sandbox.config  circle.yml  ideas.org  stack.yaml
api/: api.go  call.go  response.go
buffer/: buffer.go  contents.go  contents_test.go
communication/: hooks.go  rpc.go
core/: files.go  logging.go
data/: buffer.go  contents.go  contents_test.go  editor.go  options.go
editor/: editor.go  editor_test.go  options.go  options_test.go  vars.go  vars_test.go
server/: client.go  request.go  request_test.go  server.go
src/: CMakeLists.txt  Main-Test.hs  Main.hs  main.cc
src/Bread/: API.hs  Boards.hs  Files.hs  Server.hs
src/Bread/API/: Calls.hs
src/Bread/API/Calls/: Editing.hs  Fails.hs  README.org  TODO.org
src/Bread/Config/: Default.hs  HelpfulFunctions.hs  Types.hs
src/Bread/Core/: Boards.hs  BufferM.hs  Editor.hs  EditorM.hs  Files.hs  Main.hs  States.hs
src/Bread/Core/Editing/: Operations.hs  TextObjects.hs
src/Bread/Core/Operations/: Basic.hs
src/Bread/Core/Utility/: Log.hs
src/Bread/Data/: Boards.hs  Buffer.hs  Bundle.hs  Contents.hs  Files.hs
src/Bread/Editing/: Operations.hs  TextObjects.hs
src/Bread/Server/: API.hs  Calls.hs  Server.hs
src/data/: data.cc  data.hh
src/gui/: CMakeLists.txt  Testfile.txt  main.cc
src/server/: server.cc  server.hh
src/srv/: CMakeLists.txt
src/uv/: uv.cc  uv.hh
tcp_server/: client.go  parse_request.go  parse_request_test.go  server_test.go  tcp_server.go
test/: CMakeLists.txt  main.cc  testfile.txt
test/Bread/: FilesSpec.hs
test/Bread/Core/: FilesSpec.hs
test/Bread/Core/Editing/: OperationsSpec.hs  TextObjectsSpec.hs
test/Bread/Data/: BufferSpec.hs  FilesSpec.hs
test/Bread/Editing/: OperationsSpec.hs  TextObjectsSpec.hs
test/data/: data.cc
test/server/: server.cc
test/uv/: uv.cc
tests/data/: options_test.go
ui/: ui.go
version/: version.go
