name:                bread
version:             0.0.1.0
synopsis:            Bread: The sandwich-based text-editor
description:
            Bread is a text-editor written in Haskell. This core package serves as the "server", which clients can connect to, allowing for a number of front-ends to be written. The bread library is also built, so you can reuse any of the functions here easily.
        
homepage:            https://github.com/bread-editor/bread
license:             Apache-2.0
license-file:        LICENSE
author:              zovt
maintainer:          zovtly@gmail.com
category:            text-editor
build-type:          Simple
extra-source-files:  README.md
                   , LICENSE
cabal-version:       >=1.10


library
  exposed-modules:     Bread.Data.Files
                     , Bread.Data.Boards
                     , Bread.Data.Bundle
                     , Bread.Editing.TextObjects
                     , Bread.Editing.Operations
                     , Bread.Server.Server
                     , Bread.Server.API
                     , Bread.Server.Calls
  
  build-depends:       base == 4.8.*
                     , text
                     , bytestring
                     , msgpack == 1.0.*
                     , containers
                     , hspec
                     , network
                     , vector
                     , hashmap
                     , conduit
                     , conduit-extra
                     , mtl
  
  hs-source-dirs:      src
  default-language:    Haskell2010
  
  default-extensions: OverloadedStrings, LambdaCase

executable bread
  main-is:         Main.hs
  build-depends:   bread
                 , base == 4.8.*
                 , network
                 , text
                 , bytestring
                 , msgpack == 1.0.*
                 , vector
                 , hashmap
                 , conduit
                 , conduit-extra
                 , mtl

  hs-source-dirs:  src

  default-language: Haskell2010

  default-extensions: OverloadedStrings, LambdaCase

       
executable bread-test
  main-is:         Main-Test.hs
  build-depends:   bread
                 , base == 4.8.*
                 , network
                 , text
                 , bytestring
                 , msgpack == 1.0.*
                 , vector
                 , hashmap

  hs-source-dirs:  src

  default-language: Haskell2010

  default-extensions: OverloadedStrings, LambdaCase

source-repository head
  type:       git
  location:   https://github.com/bread-editor/bread

test-suite spec
  type:            exitcode-stdio-1.0
  hs-source-dirs:  test
  main-is:         Spec.hs
  build-depends:   base == 4.8.*
                 , text
                 , bread
                 , hspec
                 , containers
                 , msgpack == 1.0.*
                 , hashmap

  default-language:    Haskell2010
                                 
  default-extensions: OverloadedStrings, LambdaCase